Исправлен баг с сортировкой по возрастанию